--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "express": "^4.18.2",
     "nodemon": "^2.0.20",
     "pg": "^8.8.0",
-    "socket.io": "^4.5.4"
+    "socket.io": "^4.5.4",
+    "dotenv": "^16.0.3"
   }
 }
