--- a/.env
+++ b/.env
@@ -1,2 +1,7 @@
-url_frontend="http://35.89.68.205:3000"
-url_backend="http://35.89.68.205:5000"
+url_frontend="http://35.167.196.182:3000"
+url_backend="http://35.167.196.182:5000"
+user="postgres"
+password="lostpets"
+database="lostpets"
+host="lostpets-db.cgtwrl4u4ygc.us-west-2.rds.amazonaws.com"
+port=5432
